# Image_infor

./: .env.example  .gitignore  LICENSE  README.md  config.py  imagInfo.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json  setup.py  utils.py
locales/: en.json
src/image_metadata_viewer/: __init__.py  __main__.py  config.py  imagInfo.py  utils.py
