[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-metadata-viewer"
version = "2.0.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A cross-platform tool for viewing and managing image metadata"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/alsrkal/Image_info"
Bug-Tracker = "https://github.com/alsrkal/Image_info/issues"
Source = "https://github.com/alsrkal/Image_info"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
    "myst-parser>=0.18.0"
]

[project.scripts]
image-metadata-viewer = "image_metadata_viewer.__main__:main"

[project.gui-scripts]
image-metadata-viewer-gui = "image_metadata_viewer.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = find:
include-package-data = true

[tool.setuptools.package-data]
"image_metadata_viewer" = [
    "*.ui",
    "resources/*",
    "locales/*"
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["image_metadata_viewer"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E501"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "venv",
    "*.egg-info"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=image_metadata_viewer --cov-report=term-missing"

[coverage:run]
source = ["src"]
omit = ["*/tests/*"]

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "pass",
    "raise ImportError"
]

